--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>icj Jornal</title>
+    <title>ICJ Jornal - Início</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap">
     <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="Reset.css">
     <meta property="og:site_name" content="jornal icj">
     <meta property="og:url" content="https://drop-lt.github.io/jornal/index.html">
     <meta property="og:title" content="página inicial para o site">
     <meta property="og:description" content="funcionou?">
 </head>
-<body>
-    <nav>
-        <ul>
-            <li class="nav">a</li>
-            <li class="nav">a</li>
-            <li class="nav">a</li>
-            <li class="nav">a</li>
-        </ul>
-    </nav>
-    <input type="checkbox" name="" id="switch"></input>
-    <p>Ta funcionando?</p>
-</body>
+    <body>
+        <header>
+            <nav>
+                <ul>
+                    <li><A href="index.html">Início</A></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+
+                </ul>
+             </nav>                         
+        </header>   
+    </body>
 </html>
