--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap">
     <link rel="stylesheet" href="base.css">
-    <link rel="stylesheet" href="Reset.css">
+    <!--link rel="stylesheet" href="Reset.css"-->
     <meta property="og:site_name" content="jornal icj">
     <meta property="og:url" content="https://drop-lt.github.io/jornal/index.html">
     <meta property="og:title" content="página inicial para o site">
@@ -16,14 +16,44 @@
     <body>
         <header>
             <nav>
-                <ul>
-                    <li><A href="index.html">Início</A></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-
-                </ul>
+                <div><a href="index.html">Início</a></div>
+                <div><a href="esportes.html">esportes</a></div>
+                <div></div>
+                <div></div>
              </nav>                         
         </header>   
+        <article>
+            <main>
+                <img id="principal" src="" alt="fotos"/>
+                <div class="titulo-texto">
+                    <h2 class="titulo">titulo</h2>
+                    <p class="texto">texto</p>
+                </div>
+                <div class="titulo-texto">
+                    <h2 class="titulo">titulo</h2>
+                    <p class="texto">texto</p>
+                </div>
+                <div class="titulo-texto">
+                    <h2 class="titulo">titulo</h2>
+                    <p class="texto">titulo</p>
+                </div>
+                <div class="titulo-texto">
+                    <h2 class="titulo">texto</h2>
+                    <p class="texto">titulo</p>
+                </div>
+                <div class="titulo-texto">
+                    <h2 class="titulo">texto</h2>
+                    <p class="texto">titulo</p>
+                </div>
+                <div class="barra-lateral">
+                    <p>texto da barra</p>
+                    <button id="botao1">1</button>
+                    <button id="botao2">2</button>
+                    <button id="botao3">3</button>
+                    <button id="botao4">4</button>
+                    <button id="botao5">5</button>
+                </div>
+            </main>
+        </article>
     </body>
 </html>
