--- a/Assets/Html/Index.html
+++ b/Assets/Html/Index.html
@@ -4,19 +4,26 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="../Css/Base.css">
         <link rel="shortcut icon" href="../Img/unnamed.jpg">
         <title> Icj - jornal  </title>
     </head>
     <body>
         <header>
-            <nav>
-                <ul>
-                    <ol> Início </ol>
-                    <ol> </ol>
-                    <ol></ol>
+           
+            <h1><img src="../Img/download.png" ></h1>
+           
+            <nav>  
+                <ul class="ul-nav-cabeçalho">
+                    <li class="li-nav-cabeçalho"><a href="">Início</a></li>
+                    <li class="li-nav-cabeçalho"><a href="">Notícias</a></li>
+                    <li class="li-nav-cabeçalho"><a href="">Esporte</a></li>
+                    <li class="li-nav-cabeçalho"><a href="">Saúde</a></li>
+                    <li class="li-nav-cabeçalho"><a href="">Icj</a></li>
                 </ul>
             </nav>
-        </header> 
+        </header>    
     </body>
 </html>
