--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav>
                 <div><a href="index.html">Início</a></div>
                 <div><a href="esportes.html">esportes</a></div>
-                <div></div>
+                <div><a href="economia.html">economia</a></div>
                 <div></div>
              </nav>                         
         </header>   
