--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>ICJ Jornal - Início</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap">
-    <link rel="stylesheet" href="base.css">
-    <!--link rel="stylesheet" href="Reset.css"-->
+    <link rel="stylesheet" href="Style.css">
     <meta property="og:site_name" content="jornal icj">
     <meta property="og:url" content="https://drop-lt.github.io/jornal/index.html">
     <meta property="og:title" content="página inicial para o site">
