--- a/index.html
+++ b/index.html
@@ -24,25 +24,27 @@
         <article>
             <main>
                 <img id="principal" src="" alt="fotos"/>
-                <div class="titulo-texto">
-                    <h2 class="titulo">titulo</h2>
-                    <p class="texto">texto</p>
-                </div>
-                <div class="titulo-texto">
-                    <h2 class="titulo">titulo</h2>
-                    <p class="texto">texto</p>
-                </div>
-                <div class="titulo-texto">
-                    <h2 class="titulo">titulo</h2>
-                    <p class="texto">titulo</p>
-                </div>
-                <div class="titulo-texto">
-                    <h2 class="titulo">texto</h2>
-                    <p class="texto">titulo</p>
-                </div>
-                <div class="titulo-texto">
-                    <h2 class="titulo">texto</h2>
-                    <p class="texto">titulo</p>
+                <div id="titulo-texto-tudo">
+                    <div class="titulo-texto">
+                        <h2 class="titulo">titulo</h2>
+                        <p class="texto">texto</p>
+                    </div>
+                    <div class="titulo-texto">
+                        <h2 class="titulo">titulo</h2>
+                        <p class="texto">texto</p>
+                    </div>
+                    <div class="titulo-texto">
+                        <h2 class="titulo">titulo</h2>
+                        <p class="texto">titulo</p>
+                    </div>
+                    <div class="titulo-texto">
+                        <h2 class="titulo">texto</h2>
+                        <p class="texto">titulo</p>
+                    </div>
+                    <div class="titulo-texto">
+                        <h2 class="titulo">texto</h2>
+                        <p class="texto">titulo</p>
+                    </div>
                 </div>
                 <div class="barra-lateral">
                     <p>texto da barra</p>
