--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Shippori+Mincho+B1&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="../Css/Base.css">
+        <link rel="stylesheet" href="Base.css">
         <link rel="shortcut icon" href="../">
         <title> Icj - jornal  </title>
         <script>
@@ -57,11 +57,40 @@
             </nav>
         </header>
         
-        <p>__</p>
-
-
-
-
-
+        <article>
+            <main>
+                <img id="principal" src="" alt="fotos"/>
+                <div id="titulo-texto-tudo">
+                    <div class="titulo-texto">
+                        <h2 class="titulo">titulo</h2>
+                        <p class="texto">texto</p>
+                    </div>
+                    <div class="titulo-texto">
+                        <h2 class="titulo">titulo</h2>
+                        <p class="texto">texto</p>
+                    </div>
+                    <div class="titulo-texto">
+                        <h2 class="titulo">titulo</h2>
+                        <p class="texto">titulo</p>
+                    </div>
+                    <div class="titulo-texto">
+                        <h2 class="titulo">texto</h2>
+                        <p class="texto">titulo</p>
+                    </div>
+                    <div class="titulo-texto">
+                        <h2 class="titulo">texto</h2>
+                        <p class="texto">titulo</p>
+                    </div>
+                </div>
+                <div class="barra-lateral">
+                    <p>texto da barra</p>
+                    <button id="botao1">1</button>
+                    <button id="botao2">2</button>
+                    <button id="botao3">3</button>
+                    <button id="botao4">4</button>
+                    <button id="botao5">5</button>
+                </div>
+            </main>
+        </article>
     </body>
 </html>
