--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             @import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap');
             *{
                 font-family: Lato;
-                
+                transition: all 0.5 ease-in-out;
             }
             *::-webkit-scrollbar{
                background-color: rgba(0,0,0,0);
@@ -41,9 +41,22 @@
                 width: 100%;
                 height: 100px;
                 background-color: #3a3a3a;
+                transition: all 0.5s ease-in-out;
+            }
+            .caixa-imagem:hover{
+                background-color: #808080;
+                transform: translate(-2%, -2%);
+                box-shadow: 2px 2px 2px #202020;
             }
             .texto{
                 margin: 0;
+                transition: all 0.5;
+            }
+            .texto:hover{
+                font-size: large;
+                font-weight: bold;
+                color: #FFC72C;
+                transition: all 0.5s ease-in-out;
             }
             .topo{
                 display:flex;
@@ -69,13 +82,25 @@
                 color: black;
                 text-decoration: none;
                 padding: 5px 10px;
+                transition: all 0.5s ease-in-out;
             }
-
+            .link:hover {
+                background-color: #808080;
+                transform: translate(-10%, -10%);
+                box-shadow: 10px 10px 2px #505050;
+            }
             footer{
                 background-color: black;
                 height: 5px;
                 width: 100%;
                 padding: 5px;
+            }
+            .outros{
+                list-style: none;
+            }
+            .outros-itens{
+                height:0;
+                visibility:hidden;
             }
         </style>
         <div class="topo">
